--- a/index.html
+++ b/index.html
@@ -82,11 +82,7 @@
                 <button class="quick-btn" data-template="fix">
                     <i class="fas fa-tools"></i>
                     <span>Perbaikan Tele</span>
-                </button>
-                <button class="quick-btn" data-template="queue">
-                    <i class="fas fa-clock"></i>
-                    <span>Antrian</span>
-                </button>
+                </button>                
                 <button class="quick-btn" data-template="qr">
                     <i class="fas fa-qrcode"></i>
                     <span>QR Expired</span>
@@ -98,6 +94,10 @@
                 <button class="quick-btn" data-template="backup">
                     <i class="fas fa-key"></i>
                     <span>Backup Code</span>
+                </button>
+                <button class="quick-btn" data-template="queue">
+                    <i class="fas fa-users"></i>
+                    <span>Antrian</span>
                 </button>
                 <button class="quick-btn" data-template="estimation">
                     <i class="fas fa-clock"></i>
