--- a/index.html
+++ b/index.html
@@ -135,9 +135,9 @@
                     <i class="fas fa-shield-alt"></i>
                     <span>2-Step Error</span>
                 </button>
-                <button class="quick-btn" data-template="done">
+                <button class="quick-btn" data-template="prem">
                     <i class="fas fa-check-circle"></i>
-                    <span>Order Selesai</span>
+                    <span>Prem Explain</span>
                 </button>
                 <button class="quick-btn" data-template="gkmsk">
                     <i class="fas fa-thumbs-down"></i>
