--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 </button>
                 <button class="quick-btn" data-template="thanks">
                     <i class="fas fa-heart"></i>
-                    <span>Sama Samaa</span>
+                    <span>Masamaa</span>
                 </button>
                 <button class="quick-btn" data-template="list">
                     <i class="fas fa-bars"></i>
@@ -77,7 +77,7 @@
                 </button>
                 <button class="quick-btn" data-template="premium">
                     <i class="fas fa-crown"></i>
-                    <span>Order Prem</span>
+                    <span>Order Web</span>
                 </button>
                 <button class="quick-btn" data-template="fix">
                     <i class="fas fa-tools"></i>
@@ -85,7 +85,7 @@
                 </button>                
                 <button class="quick-btn" data-template="qr">
                     <i class="fas fa-qrcode"></i>
-                    <span>QR Expired</span>
+                    <span>Salah Klik</span>
                 </button>
                 <button class="quick-btn" data-template="wrongpw">
                     <i class="fas fa-key"></i>
@@ -336,4 +336,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
