--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 </button>
                 <button class="quick-btn" data-template="estimation">
                     <i class="fas fa-clock"></i>
-                    <span>Estimasi</span>
+                    <span>Bikin BC GK</span>
                 </button>
                 <button class="quick-btn" data-template="queue">
                     <i class="fas fa-users"></i>
@@ -350,3 +350,4 @@
 </body>
 
 </html>
+
