--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                     <span>Reset PW</span>
                 </button>
                 <button class="quick-btn" data-template="estimation">
-                    <i class="fas fa-handshake-o"></i>
+                    <i class="fas fa-exclamation"></i>
                     <span>Bikin BC GK</span>
                 </button>
                 <button class="quick-btn" data-template="queue">
@@ -350,5 +350,6 @@
 </body>
 
 </html>
+
 
 
